8172149: CTW library should call System::exit
Reviewed-by: vlivanov